--- a/index.html
+++ b/index.html
@@ -109,22 +109,17 @@
 </main>
 
 <footer class="site-footer">
-
-  <div class="footer-container">
-
+  <div class="footer-container container">
     <div class="footer-col">
       <h3>J L Serviços Contábeis</h3>
-      <p>
-        Soluções contábeis com transparência, segurança e foco em resultados
-        para MEI, Pessoa Física e Empresas.
-      </p>
+      <p>Soluções contábeis com transparência, segurança e foco em resultados para MEI, Pessoa Física e Empresas.</p>
     </div>
 
     <div class="footer-col">
       <h4>Links Rápidos</h4>
       <ul>
         <li><a href="index.html">Início</a></li>
-        <li><a href="servicos/mei/index.html">Serviços</a></li>
+        <li><a href="#servicos">Serviços</a></li>
         <li><a href="sobre/index.html">Quem Somos</a></li>
         <li><a href="lgpd/index.html">Política de Privacidade</a></li>
       </ul>
@@ -132,40 +127,16 @@
 
     <div class="footer-col">
       <h4>Contato</h4>
-
-      <a href="https://wa.me/5561920041427"
-         target="_blank"
-         style="
-           display:inline-block;
-           background:#25D366;
-           color:#000;
-           padding:12px 20px;
-           border-radius:30px;
-           font-weight:bold;
-           text-decoration:none;
-           margin-bottom:15px;
-         ">
+      <a href="https://wa.me/5561920041427" target="_blank" class="btn-whatsapp-footer">
         Falar no WhatsApp
       </a>
-
-      <p style="margin-top:15px;">
-        jlservicoscontabeis0@gmail.com
-      </p>
+      <p class="footer-email">jlservicoscontabeis0@gmail.com</p>
     </div>
-
   </div>
 
-  <div style="
-    border-top:1px solid rgba(255,255,255,0.1);
-    margin-top:40px;
-    padding-top:20px;
-    text-align:center;
-    font-size:14px;
-    color:#ffffff99;
-  ">
-    © 2026 J L Serviços Contábeis — Todos os direitos reservados
+  <div class="footer-bottom">
+    <p>© 2026 J L Serviços Contábeis — Todos os direitos reservados</p>
   </div>
-
 </footer>
 
 <script type="module" src="./menu.js"></script>
