--- a/servicos/certificado-digital/index.html
+++ b/servicos/certificado-digital/index.html
@@ -56,10 +56,36 @@
     </section>
   </main>
 
-  <footer class="site-footer" style="text-align: center; padding: 60px 0; border-top: 1px solid rgba(255,255,255,0.1); margin-top: 80px;">
-    <h3 style="color: #bd9617; margin-bottom: 10px;">J L Serviços Contábeis</h3>
-    <p style="color: #fff; opacity: 0.5; font-size: 0.8rem;">© 2026 — Todos os direitos reservados</p>
-  </footer>
+<footer class="site-footer">
+  <div class="footer-container container">
+    <div class="footer-col">
+      <h3>J L Serviços Contábeis</h3>
+      <p>Soluções contábeis com transparência, segurança e foco em resultados para MEI, Pessoa Física e Empresas.</p>
+    </div>
+
+    <div class="footer-col">
+      <h4>Links Rápidos</h4>
+      <ul>
+        <li><a href="../../index.html">Início</a></li>
+        <li><a href="../../index.html#servicos">Serviços</a></li>
+        <li><a href="../../sobre/index.html">Quem Somos</a></li>
+        <li><a href="../../lgpd/index.html">Política de Privacidade</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Contato</h4>
+      <a href="https://wa.me/5561920041427" target="_blank" class="btn-whatsapp-footer">
+        Falar no WhatsApp
+      </a>
+      <p class="footer-email">jlservicoscontabeis0@gmail.com</p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2026 J L Serviços Contábeis — Todos os direitos reservados</p>
+  </div>
+</footer>
 
   <script src="./certificado.js"></script>
 </body>
