--- a/lgpd/index.html
+++ b/lgpd/index.html
@@ -84,30 +84,36 @@
 
   </main>
 
-  <footer class="site-footer">
-    <div class="footer-container">
-      <div class="footer-col">
-        <h3>J L Serviços Contábeis</h3>
-        <p>Soluções contábeis com transparência, segurança e foco em resultados para MEI, Pessoa Física e Empresas.</p>
-      </div>
-      <div class="footer-col">
-        <h4>Links Rápidos</h4>
-        <ul>
-          <li><a href="/jl-servicos-contabeis/">Início</a></li>
-          <li><a href="/jl-servicos-contabeis/sobre/">Quem Somos</a></li>
-          <li><a href="/jl-servicos-contabeis/lgpd/">Política de Privacidade</a></li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <h4>Contato</h4>
-        <a href="https://wa.me/5561920041427" target="_blank" class="btn-whats-footer">Falar no WhatsApp</a>
-        <p style="margin-top:15px;">jlservicoscontabeis0@gmail.com</p>
-      </div>
+<footer class="site-footer">
+  <div class="footer-container container">
+    <div class="footer-col">
+      <h3>J L Serviços Contábeis</h3>
+      <p>Soluções contábeis com transparência, segurança e foco em resultados para MEI, Pessoa Física e Empresas.</p>
     </div>
-    <div class="footer-bottom">
-      © 2026 J L Serviços Contábeis — Todos os direitos reservados
+
+    <div class="footer-col">
+      <h4>Links Rápidos</h4>
+      <ul>
+        <li><a href="../../index.html">Início</a></li>
+        <li><a href="../../index.html#servicos">Serviços</a></li>
+        <li><a href="../../sobre/index.html">Quem Somos</a></li>
+        <li><a href="../../lgpd/index.html">Política de Privacidade</a></li>
+      </ul>
     </div>
-  </footer>
+
+    <div class="footer-col">
+      <h4>Contato</h4>
+      <a href="https://wa.me/5561920041427" target="_blank" class="btn-whatsapp-footer">
+        Falar no WhatsApp
+      </a>
+      <p class="footer-email">jlservicoscontabeis0@gmail.com</p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2026 J L Serviços Contábeis — Todos os direitos reservados</p>
+  </div>
+</footer>
 
 </body>
 </html>
