--- a/servicos/certidoes-regularizacoes/index.html
+++ b/servicos/certidoes-regularizacoes/index.html
@@ -27,41 +27,28 @@
     <a href="../../index.html">Início</a> / <span>Serviços</span> / <strong>Certidões</strong>
   </nav>
 
-  <main class="container certidoes-page">
-
-    <header class="certidoes-header">
-      <h1>Certidões e Regularizações</h1>
-      <p>Emissão de documentos e regularização de pendências fiscais com agilidade e segurança digital.</p>
+ <main class="container" style="padding: 60px 0;">
+    <header style="text-align: center; margin-bottom: 50px;">
+        <h1 style="color: #bd9617; font-size: 2.5rem; text-transform: uppercase;">Certidões e Regularizações</h1>
     </header>
 
-    <section class="certidoes-section">
-      <h2>Serviços Disponíveis</h2>
-
-      <div class="services-grid">
-        <a class="service-card" data-servico="certidao-negativa">
-          <span class="service-title">Certidão Negativa de Débitos (CND)</span>
-          <span class="service-price">R$ 79,99</span>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px;">
+        <a href="../compra/?servico=cnd" style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;">
+            <span style="color: #fff; font-weight: 700; font-size: 1.1rem; display: block; margin-bottom: 15px;">Certidão Negativa (CND)</span>
+            <span style="color: #bd9617; font-size: 1.4rem; font-weight: 800;">R$ 79,99</span>
         </a>
 
-        <a class="service-card" data-servico="regularizacao-cadastral">
-          <span class="service-title">Regularização Cadastral</span>
-          <span class="service-price">R$ 149,99</span>
+        <a href="../compra/?servico=reg-cadastral" style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;">
+            <span style="color: #fff; font-weight: 700; font-size: 1.1rem; display: block; margin-bottom: 15px;">Regularização Cadastral</span>
+            <span style="color: #bd9617; font-size: 1.4rem; font-weight: 800;">R$ 149,99</span>
         </a>
 
-        <a class="service-card" data-servico="certidao-estadual">
-          <span class="service-title">Certidão Estadual</span>
-          <span class="service-price">R$ 69,99</span>
+        <a href="../compra/?servico=cert-estadual" style="text-decoration: none; background: #0e2a47; border: 1px solid #bd9617; padding: 40px 20px; border-radius: 12px; text-align: center; transition: 0.3s; display: block;">
+            <span style="color: #fff; font-weight: 700; font-size: 1.1rem; display: block; margin-bottom: 15px;">Certidão Estadual</span>
+            <span style="color: #bd9617; font-size: 1.4rem; font-weight: 800;">R$ 69,99</span>
         </a>
-
-        <a class="service-card" data-servico="certidao-municipal">
-          <span class="service-title">Certidão Municipal</span>
-          <span class="service-price">R$ 69,99</span>
-        </a>
-      </div>
-    </section>
-
-  </main>
-
+    </div>
+</main>
   <footer class="site-footer">
   <div class="footer-container container">
     <div class="footer-col">
