--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -26,56 +26,64 @@
     <a href="../../index.html">Início</a> / <span>Serviços</span> / <strong>MEI</strong>
   </nav>
 
-  <main class="container mei-page">
-    <header class="mei-header">
-      <h1>Serviços para MEI</h1>
-      <p>Soluções completas para manter seu CNPJ regularizado com a expertise da JL.</p>
-    </header>
+<main class="container" style="padding: 40px 0;">
+    <h1 style="color:#bd9617; text-align:center; margin-bottom:40px;">Serviços Completos MEI</h1>
 
-    <section class="mei-section">
-      <h2>Serviços Avulsos</h2>
-      <div class="services-grid">
-        <a class="service-card" data-servico="abertura-mei">
-          <span class="service-title">Abertura de MEI</span>
-          <span class="service-price">R$ 148,99</span>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 15px; margin-bottom: 60px;">
+        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600;">Abertura de MEI</p>
+            <p style="color:#bd9617; font-weight:800;">R$ 148,99</p>
         </a>
-        <a class="service-card" data-servico="regularizacao-mei">
-          <span class="service-title">Regularização</span>
-          <span class="service-price">R$ 198,99</span>
+        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600;">Regularização</p>
+            <p style="color:#bd9617; font-weight:800;">R$ 198,99</p>
         </a>
-        <a class="service-card" data-servico="dasn">
-          <span class="service-title">Declaração Anual</span>
-          <span class="service-price">R$ 98,99</span>
+        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600;">Baixa de MEI</p>
+            <p style="color:#bd9617; font-weight:800;">R$ 128,99</p>
         </a>
-      </div>
-    </section>
+        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600;">Emissão DAS</p>
+            <p style="color:#bd9617; font-weight:800;">R$ 48,99</p>
+        </a>
+        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600;">DASN (Anual)</p>
+            <p style="color:#bd9617; font-weight:800;">R$ 98,99</p>
+        </a>
+        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600;">Parcelamento</p>
+            <p style="color:#bd9617; font-weight:800;">R$ 178,99</p>
+        </a>
+        <a href="#" style="background:#0e2a47; padding:20px; border:1px solid rgba(189,150,23,0.3); border-radius:8px; text-align:center; text-decoration:none;">
+            <p style="color:#fff; font-weight:600;">Alteração</p>
+            <p style="color:#bd9617; font-weight:800;">R$ 78,99</p>
+        </a>
+    </div>
 
-    <section class="mei-section">
-      <h2>Planos Mensais</h2>
-      <div class="plans-grid">
-        <div class="plan-card">
-          <h3>Básico</h3>
-          <p class="price">R$ 99,99/mês</p>
-          <ul>
-            <li>✔ Emissão mensal DAS</li>
-            <li>✔ Suporte WhatsApp</li>
-          </ul>
-          <button class="btn-plan" data-plano="basico">Contratar Plano</button>
+    <div style="display: flex; gap: 30px; flex-wrap: wrap; justify-content: center;">
+        <div style="flex: 1; min-width: 300px; border: 1px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(14,42,71,0.5);">
+            <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Básico</h3>
+            <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px;">R$ 99,99/mês</p>
+            <ul style="list-style: none; color: #ccc; font-size: 14px; line-height: 2.2;">
+                <li>✔ Emissão mensal do DAS</li>
+                <li>✔ Lembretes de vencimento</li>
+                <li>✔ DASN-SIMEI Inclusa</li>
+                <li>✔ Suporte via WhatsApp</li>
+            </ul>
         </div>
-
-        <div class="plan-card premium">
-          <span class="badge">MAIS VENDIDO</span>
-          <h3>Premium</h3>
-          <p class="price">R$ 159,99/mês</p>
-          <ul>
-            <li>✔ Todos do Básico</li>
-            <li>✔ Parcelamentos inclusos</li>
-          </ul>
-          <button class="btn-plan destaque" data-plano="premium">Contratar Premium</button>
+        <div style="flex: 1; min-width: 300px; border: 2px solid #bd9617; padding: 40px 25px; border-radius: 15px; background: rgba(189,150,23,0.1);">
+            <h3 style="color:#bd9617; margin-bottom: 10px;">Plano Premium</h3>
+            <p style="font-size: 1.5rem; font-weight: 800; margin-bottom: 20px;">R$ 159,99/mês</p>
+            <ul style="list-style: none; color: #fff; font-size: 14px; line-height: 2.2;">
+                <li>✔ Tudo do Plano Básico</li>
+                <li>✔ Parcelamentos de débitos</li>
+                <li>✔ Emissão de certidões mensais</li>
+                <li>✔ Suporte Prioritário</li>
+                <li>✔ 20% desconto em serviços avulsos</li>
+            </ul>
         </div>
-      </div>
-    </section>
-  </main>
+    </div>
+</main>
 
 <footer class="site-footer">
   <div class="footer-container container">
