--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
 
 <body>
 <header class="site-header">
-  <div class="container header-top">
-    
-    <div class="logo-wrapper">
-      <img src="logo.png" alt="Logo JL" class="site-logo">
-      <div class="title-group">
-        <h1 class="site-title">J L Serviços Contábeis</h1>
-        <p class="site-subtitle">Atendimento Online</p>
+  <div class="container header-content"> <div class="brand-identity">
+      <img src="logo.png" alt="Logotipo JL Serviços Contábeis" class="site-logo-header">
+      <div class="brand-text">
+        <h1 class="site-title-header">J L Serviços Contábeis</h1>
+        <p class="site-subtitle-header">Atendimento Online para todo o Brasil</p>
       </div>
     </div>
 
@@ -42,7 +40,6 @@
         <li class="menu-item"><a href="lgpd/index.html">LGPD</a></li>
       </ul>
     </nav>
-
   </div>
 </header>
 
