--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <header class="site-header">
   <div class="container header-content"> <div class="brand-identity">
-      <img src="logo.png" alt="Logotipo JL Serviços Contábeis" class="site-logo-header">
+     <img src="logo.png" alt="Logotipo JL Serviços Contábeis" class="site-logo-circle">
       <div class="brand-text">
         <h1 class="site-title-header">J L Serviços Contábeis</h1>
         <p class="site-subtitle-header">Atendimento Online para todo o Brasil</p>
