--- a/lgpd/index.html
+++ b/lgpd/index.html
@@ -6,7 +6,7 @@
   <title>Política de Privacidade (LGPD) | J L Serviços Contábeis</title>
 
   <link rel="stylesheet" href="../style.css" />
-  <link rel="stylesheet" href="../sobre/sobre.css" /> <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
