--- a/servicos/certificado-digital/index.html
+++ b/servicos/certificado-digital/index.html
@@ -7,7 +7,7 @@
   
   <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="./certificado.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
