--- a/servicos/index.html
+++ b/servicos/index.html
@@ -3,107 +3,142 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todos os Serviços | J L Serviços Contábeis</title>
+  <title>Catálogo de Serviços | J L Serviços Contábeis</title>
   
   <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="./certidoes-regularizacoes/certidoes.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
-  <header class="site-header">
-    <div class="container header-top">
-      <h1 class="site-title" style="font-size: 1.5rem;">J L Serviços Contábeis</h1>
-      <nav class="main-nav">
-        <ul class="menu">
-          <li class="menu-item"><a href="../index.html">Início</a></li>
-          <li class="menu-item"><a href="../blog/index.html">Blog</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <nav class="breadcrumb container">
-    <a href="../index.html">Início</a> <span>›</span> <strong>Serviços</strong>
-  </nav>
-
-  <main class="container pf-page">
-    <header class="pf-header">
-      <h1>Catálogo de Serviços</h1>
-      <p>Soluções completas separadas por categorias para facilitar sua busca.</p>
-    </header>
-
-    <section class="pf-section" style="margin-bottom: 50px;">
-      <h2 style="text-align: left; border-left: 5px solid #bd9617; padding-left: 15px; margin-bottom: 25px;">Microempreendedor Individual (MEI)</h2>
-      <div class="services-grid">
-        <a class="service-card" href="./mei/index.html"><span class="service-title">Planos Mensais MEI</span><span class="service-price">A partir de R$ 99,99</span></a>
-        <a class="service-card" href="./mei/index.html"><span class="service-title">Abertura e Regularização</span><span class="service-price">Consulte</span></a>
-      </div>
-    </section>
-
-    <section class="pf-section" style="margin-bottom: 50px;">
-      <h2 style="text-align: left; border-left: 5px solid #bd9617; padding-left: 15px; margin-bottom: 25px;">Pessoa Física</h2>
-      <div class="services-grid">
-        <a class="service-card" href="./pessoa-fisica/index.html"><span class="service-title">Imposto de Renda (IRPF)</span><span class="service-price">R$ 139,99</span></a>
-        <a class="service-card" href="./pessoa-fisica/index.html"><span class="service-title">Regularização de CPF</span><span class="service-price">R$ 79,99</span></a>
-      </div>
-    </section>
-
-    <section class="pf-section" style="margin-bottom: 50px;">
-      <h2 style="text-align: left; border-left: 5px solid #bd9617; padding-left: 15px; margin-bottom: 25px;">Certidões e Regularizações</h2>
-      <div class="services-grid">
-        <a class="service-card" href="./certidoes-regularizacoes/index.html"><span class="service-title">Emissão de Certidões</span><span class="service-price">R$ 89,99</span></a>
-        <a class="service-card" href="./certidoes-regularizacoes/index.html"><span class="service-title">Regularização de Empresas</span><span class="service-price">R$ 249,99</span></a>
-      </div>
-    </section>
-
-    <section class="pf-section" style="margin-bottom: 50px;">
-      <h2 style="text-align: left; border-left: 5px solid #bd9617; padding-left: 15px; margin-bottom: 25px;">Certificado Digital</h2>
-      <div class="services-grid">
-        <a class="service-card" href="./certificado-digital/index.html"><span class="service-title">Emissão de A1 ou A3</span><span class="service-price">A partir de R$ 189,99</span></a>
-      </div>
-    </section>
-
-    <section class="pf-section">
-      <h2 style="text-align: left; border-left: 5px solid #bd9617; padding-left: 15px; margin-bottom: 25px;">Outros Serviços</h2>
-      <div class="services-grid">
-        <a class="service-card" href="./outros/index.html"><span class="service-title">Planilhas e Organização</span><span class="service-price">A partir de R$ 59,99</span></a>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="footer-container container">
-      <div class="footer-col">
-        <h3>J L Serviços Contábeis</h3>
-        <p>Soluções contábeis com transparência, segurança e foco em resultados.</p>
-      </div>
-
-      <div class="footer-col">
-        <h4>Links Rápidos</h4>
-        <ul>
-          <li><a href="../index.html">Início</a></li>
-          <li><a href="index.html">Serviços</a></li>
-          <li><a href="../sobre/index.html">Quem Somos</a></li>
-          <li><a href="../lgpd/index.html">Privacidade</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col">
-        <h4>Contato</h4>
-        <a href="https://wa.me/5561920041427" target="_blank" class="btn-footer-wpp">
-          Falar no WhatsApp
-        </a>
-        <div class="footer-email-box">
-          <span>jlservicoscontabeis0@gmail.com</span>
-        </div>
+<header class="site-header">
+  <div class="container header-content"> 
+    <div class="brand-identity">
+      <img src="../logo.png" alt="Logotipo JL Serviços Contábeis" class="site-logo-circle">
+      <div class="brand-text">
+        <h1 class="site-title-header">J L Serviços Contábeis</h1>
+        <p class="site-subtitle-header">Atendimento Online para todo o Brasil</p>
       </div>
     </div>
 
-    <div class="footer-bottom">
-      <p>© 2026 J L Serviços Contábeis — Todos os direitos reservados</p>
-    </div>
-  </footer>
+    <nav class="main-nav">
+      <ul class="menu">
+        <li class="menu-item"><a href="../index.html">Início</a></li>
+        <li class="menu-item dropdown">
+          <button class="dropdown-toggle" type="button">Serviços</button>
+          <ul class="dropdown-menu">
+            <li><a href="./mei/index.html">MEI</a></li>
+            <li><a href="./pessoa-fisica/index.html">Pessoa Física</a></li>
+            <li><a href="./certidoes-regularizacoes/index.html">Certidões</a></li>
+            <li><a href="./certificado-digital/index.html">Certificado Digital</a></li>
+            <li><a href="./outros/index.html">Outros</a></li>
+          </ul>
+        </li>
+        <li class="menu-item"><a href="../blog/index.html">Blog</a></li>
+        <li class="menu-item"><a href="../sobre/index.html">Sobre</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
+<nav class="breadcrumb container" style="margin-top: 20px; color: rgba(255,255,255,0.6); font-size: 0.9rem;">
+  <a href="../index.html" style="color: #bd9617; text-decoration: none;">Início</a> <span>›</span> <strong>Serviços</strong>
+</nav>
+
+<main class="container">
+  <div style="text-align: center; margin: 50px 0;">
+    <h1 class="site-title-header" style="font-size: 3rem !important;">Catálogo de Serviços</h1>
+    <p class="site-subtitle-header">Escolha a categoria desejada para ver os detalhes.</p>
+    <div style="width: 60px; height: 3px; background: #bd9617; margin: 20px auto;"></div>
+  </div>
+
+  <section style="margin-bottom: 60px;">
+    <h2 style="font-family: 'Playfair Display', serif; color: #bd9617; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid #bd9617; padding-left: 15px;">
+      Microempreendedor Individual (MEI)
+    </h2>
+    <div class="services-grid">
+      <a class="service-card" href="./mei/index.html">
+        <span class="service-title">Planos Mensais MEI</span>
+        <span class="service-price">A partir de R$ 99,99</span>
+        <span style="color: #bd9617; margin-top: 10px; font-size: 0.8rem;">Ver detalhes →</span>
+      </a>
+      <a class="service-card" href="./mei/index.html">
+        <span class="service-title">Abertura e Regularização</span>
+        <span class="service-price">Consulte</span>
+        <span style="color: #bd9617; margin-top: 10px; font-size: 0.8rem;">Ver detalhes →</span>
+      </a>
+    </div>
+  </section>
+
+  <section style="margin-bottom: 60px;">
+    <h2 style="font-family: 'Playfair Display', serif; color: #bd9617; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid #bd9617; padding-left: 15px;">
+      Pessoa Física
+    </h2>
+    <div class="services-grid">
+      <a class="service-card" href="./pessoa-fisica/index.html">
+        <span class="service-title">Imposto de Renda (IRPF)</span>
+        <span class="service-price">R$ 139,99</span>
+        <span style="color: #bd9617; margin-top: 10px; font-size: 0.8rem;">Ver detalhes →</span>
+      </a>
+      <a class="service-card" href="./pessoa-fisica/index.html">
+        <span class="service-title">Regularização de CPF</span>
+        <span class="service-price">R$ 79,99</span>
+        <span style="color: #bd9617; margin-top: 10px; font-size: 0.8rem;">Ver detalhes →</span>
+      </a>
+    </div>
+  </section>
+
+  <section style="margin-bottom: 60px;">
+    <h2 style="font-family: 'Playfair Display', serif; color: #bd9617; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid #bd9617; padding-left: 15px;">
+      Certidões e Regularizações
+    </h2>
+    <div class="services-grid">
+      <a class="service-card" href="./certidoes-regularizacoes/index.html">
+        <span class="service-title">Emissão de Certidões</span>
+        <span class="service-price">R$ 89,99</span>
+        <span style="color: #bd9617; margin-top: 10px; font-size: 0.8rem;">Ver detalhes →</span>
+      </a>
+      <a class="service-card" href="./certidoes-regularizacoes/index.html">
+        <span class="service-title">Regularização de Empresas</span>
+        <span class="service-price">R$ 249,99</span>
+        <span style="color: #bd9617; margin-top: 10px; font-size: 0.8rem;">Ver detalhes →</span>
+      </a>
+    </div>
+  </section>
+
+  <section style="margin-bottom: 60px;">
+    <h2 style="font-family: 'Playfair Display', serif; color: #bd9617; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid #bd9617; padding-left: 15px;">
+      Certificado Digital
+    </h2>
+    <div class="services-grid">
+      <a class="service-card" href="./certificado-digital/index.html">
+        <span class="service-title">Emissão de A1 ou A3</span>
+        <span class="service-price">A partir de R$ 189,99</span>
+        <span style="color: #bd9617; margin-top: 10px; font-size: 0.8rem;">Ver detalhes →</span>
+      </a>
+    </div>
+  </section>
+
+  <section style="margin-bottom: 80px;">
+    <h2 style="font-family: 'Playfair Display', serif; color: #bd9617; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid #bd9617; padding-left: 15px;">
+      Outros Serviços
+    </h2>
+    <div class="services-grid">
+      <a class="service-card" href="./outros/index.html">
+        <span class="service-title">Planilhas e Organização</span>
+        <span class="service-price">A partir de R$ 59,99</span>
+        <span style="color: #bd9617; margin-top: 10px; font-size: 0.8rem;">Ver detalhes →</span>
+      </a>
+    </div>
+  </section>
+</main>
+
+<footer class="site-footer">
+  <div class="footer-bottom">
+    <p>© 2026 J L Serviços Contábeis — Todos os direitos reservados</p>
+  </div>
+</footer>
+
+<script type="module" src="../menu.js"></script>
 </body>
 </html>
